# Algorithm-Tracer

./: .gitignore  .sh1  COMMIT_LOG.md  README.md  project-contents.txt  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/algorithms/: __init__.py  dijkstra.py  kruskal.py  linear_search.py  merge_sort.py  quick_sort.py
app/ui/: components.py  streamlit_app.py
app/utils/: io.py  sample_generators.py  types.py  union_find.py  validators.py
app/visualization/: engine.py  renderers.py
docs/: API.md
examples/: trace_dijkstra_example.json  trace_merge_sort_example.json
sample_data/: sample_graph.json
tests/: test_dijkstra.py  test_kruskal.py  test_linear_search.py  test_merge_sort.py  test_quick_sort.py  test_streamlit_app.py
